--- a/packages/locales/src/lang/cn/entity.json
+++ b/packages/locales/src/lang/cn/entity.json
@@ -20,6 +20,7 @@
     "entity.label.entity_type_of_enum": "ENUM",
     "entity.label.historical_data": "历史数据",
     "entity.label.set_enumeration_items": "设置枚举项",
+    "entity.label.enumeration_items": "枚举项",
     "entity.label.set_value": "设置值",
     "entity.label.value_source": "值来源",
     "entity.label.unit": "单位",
