--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -145,6 +145,8 @@
     "common.time.afternoon": "p.m.",
     "common.time.morning": "a.m.",
     "common.unit.second": "s",
+    "common.label.start_date":  "Start Date",
+    "common.label.end_date":  "End Date",
     "common.label.please_enter": "Please enter",
     "valid.date.selected_time_greater_than_now_time": "The time earlier than current time is not supported.",
     "valid.date.start_time_greater_than_end_time": "The start time cannot be later than end time.",
