--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -146,5 +146,6 @@
     "workflow.label.httpin_node_desc": "Listen for incoming HTTP requests to trigger a running workflow. ",
     "workflow.label.mqtt_node_desc": "Listen for incoming MQTT messages to trigger a running workflow.",
     "workflow.label.connection_parameters": "Connection Parameters",
-    "workflow.label.output_variables": "Output Variables"
+    "workflow.label.output_variables": "Output Variables",
+    "workflow.valid.invalid_url_path": "The {1} field must start with /, support alphanumeric and {2} formats."
 }
