--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -230,5 +230,6 @@
     "common.label.broker_port": "Broker Port",
     "common.label.client_id": "Client ID",
     "common.label.visible": "Visible",
-    "common.label.invisible": "Invisible"
+    "common.label.invisible": "Invisible",
+    "common.label.upload_image": "Upload Image"
 }
