--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -212,6 +212,5 @@
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
     "valid.input.string_letter_num_special_char": "仅允许大写字母、小写字母、数字和_-.。",
-    "valid.resp.at_least_one": "请至少选择一个{1}。",
-    "common.invalid_http_address": "不合法的地址"
+    "valid.resp.at_least_one": "请至少选择一个{1}。"
 }
