--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -15,12 +15,15 @@
     "common.label.add": "添加",
     "common.label.back": "返回",
     "common.label.banned": "禁止",
+    "common.label.broker_address": "Broker地址",
+    "common.label.broker_port": "Broker端口号",
     "common.label.bulk_deletion": "批量删除",
     "common.label.bulk_removal": "批量移除",
     "common.label.by_device": "基于设备",
     "common.label.choices": "待选择",
     "common.label.chosen": "已选",
     "common.label.click_to_try_fix": "点击尝试修复",
+    "common.label.client_id": "客户端ID",
     "common.label.close": "关闭",
     "common.label.confirm_password": "确认密码",
     "common.label.connect": "连接",
@@ -31,6 +34,8 @@
     "common.label.create_time": "创建时间",
     "common.label.creator": "创建者",
     "common.label.dashboard": "仪表板",
+    "common.label.data_encoding_format": "数据编码格式",
+    "common.label.data_source": "数据源",
     "common.label.data_type": "数据类型",
     "common.label.day": "{1} 天",
     "common.label.days": "{1} 天",
@@ -44,6 +49,7 @@
     "common.label.empty": "无数据",
     "common.label.enable_status": "启用状态",
     "common.label.enable_title": "启用{1}",
+    "common.label.end_date": "结束时间",
     "common.label.entity": "实体",
     "common.label.error": "错误",
     "common.label.export": "导出",
@@ -54,12 +60,14 @@
     "common.label.import": "导入",
     "common.label.input": "输入",
     "common.label.integration": "集成",
+    "common.label.invisible": "不可见",
     "common.label.json": "JSON",
     "common.label.key": "键",
     "common.label.label": "标签",
     "common.label.language": "语言",
     "common.label.last_modified_time": "最后更新时间",
     "common.label.loading": "加载中...",
+    "common.label.local_upload": "本地上传",
     "common.label.log": "日志",
     "common.label.login": "登录",
     "common.label.max": "最大",
@@ -86,10 +94,12 @@
     "common.label.removal": "移除",
     "common.label.remove": "移除",
     "common.label.rename": "重命名",
+    "common.label.required": "必填",
     "common.label.run": "运行",
     "common.label.search": "搜索",
     "common.label.second": "{1} 秒",
     "common.label.seconds": "{1} 秒",
+    "common.label.select_entity": "选择实体",
     "common.label.selected": "选中",
     "common.label.service": "服务",
     "common.label.setting": "设置",
@@ -97,7 +107,9 @@
     "common.label.sign_out": "登出",
     "common.label.sort_type_newest_to_oldest": "最新至最早",
     "common.label.sort_type_oldest_to_newest": "最早至最新",
+    "common.label.start_date": "起始时间",
     "common.label.success": "成功",
+    "common.label.system": "系统",
     "common.label.table_disabled_status": "禁用状态",
     "common.label.target": "目标",
     "common.label.test": "测试",
@@ -108,10 +120,13 @@
     "common.label.type": "类型",
     "common.label.unit": "单位",
     "common.label.update_time": "更新时间",
+    "common.label.upload_image": "上传图片",
+    "common.label.uploading": "上传中",
     "common.label.url": "URL",
     "common.label.username": "用户名",
     "common.label.value": "值",
     "common.label.version": "版本",
+    "common.label.visible": "可见",
     "common.label.webhook": "Webhook",
     "common.label.week": "星期",
     "common.label.workflow": "工作流",
@@ -121,6 +136,7 @@
     "common.language.en": "English",
     "common.language.en_short": "EN",
     "common.message.add_success": "添加成功。",
+    "common.message.click_to_upload_file": "点击或拖拽文件至此区域进行上传。",
     "common.message.copy_successful": "复制成功。",
     "common.message.delete_success": "删除成功。",
     "common.message.error_user_business_details_not_exist": "用户无商务参数",
@@ -130,6 +146,11 @@
     "common.message.register_helper_text": "欢迎！让我们开始创建一个用户账户。",
     "common.message.remove_success": "移除成功",
     "common.message.something_wrong_title": "出错了",
+    "common.message.upload_error_file_invalid_type": "文件类型必须为{1}。",
+    "common.message.upload_error_file_too_large": "文件大小大于{1}。",
+    "common.message.upload_error_file_too_small": "文件大小小于{1}。",
+    "common.message.upload_error_server_error": "上传失败，请稍后重试。",
+    "common.message.upload_error_too_many_files": "仅支持上传一张图片",
     "common.modal.desc_leave_current_page": "您所调整的内容不会保存，是否确认离开此页面？",
     "common.modal.title_leave_current_page": "离开当前页面",
     "common.placeholder.input": "请输入",
@@ -145,8 +166,6 @@
     "common.time.afternoon": "下午",
     "common.time.morning": "上午",
     "common.unit.second": "秒",
-    "common.label.start_date":  "开始时间",
-    "common.label.end_date":  "结束时间",
     "valid.date.selected_time_greater_than_now_time": "不支持早于当前时间的时间。",
     "valid.date.start_time_greater_than_end_time": "开始时间不能晚于结束时间。",
     "valid.date.start_time_less_than_pre_end_time": "开始时间不能早于上次结束时间。",
@@ -174,6 +193,7 @@
     "valid.input.letters": "仅限字母（大小写）。",
     "valid.input.letters_and_num": "仅限字母和数字（大小写）。",
     "valid.input.mac": "请输入MAC地址。",
+    "valid.input.match_regexp": "请输入符合正则表达式的有效值:{1}。",
     "valid.input.max_length": "输入字符的长度不能超过{1}位。",
     "valid.input.max_value": "输入值的最大值不能超过{0}。",
     "valid.input.min_length": "输入值的长度应大于或等于{0}。",
@@ -203,6 +223,7 @@
     "valid.input.start_with_normal_char": "格式要求：输入必须以小写字母（a-z）、大写字母（A-Z）、数字（0-9）或下划线（_）开头。",
     "valid.input.start_with_ws_wss": "请输入有效的URL，必须以ws://或wss://开头。",
     "valid.input.step_value": "请输入{0}的倍数。",
+    "valid.input.string_letter_num_special_char": "仅支持大写字母、小写字母、数字 、 \"_\" 和 \"-\"。",
     "valid.input.string_rules_one": "ASCII应包含大写字母、小写字母、数字或_、-，且不允许空格。",
     "valid.input.string_rules_two": "仅允许大写字母、小写字母、数字和!\"#$%&'()*+,-./:;<=>@[]^_`{|}~。",
     "valid.input.two_sixteen_hexadecimal": "请输入两个16位十六进制值，用“-”分隔。",
@@ -210,6 +231,5 @@
     "valid.input.username": "用户名长度最小长度为5。",
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
-    "valid.input.string_letter_num_special_char": "仅允许大写字母、小写字母、数字和_-.。",
     "valid.resp.at_least_one": "请至少选择一个{1}。"
 }
