--- a/packages/locales/src/lang/cn/setting.json
+++ b/packages/locales/src/lang/cn/setting.json
@@ -1,4 +1,10 @@
 {
+    "setting.credentials.edit_http": "编辑HTTP凭证",
+    "setting.credentials.edit_mqtt": "编辑MQTT凭证",
+    "setting.credentials.edit_smtp": "编辑 SMTP 设置",
+    "setting.credentials.smtp_addr": "SMTP 服务器地址",
+    "setting.credentials.smtp_title": "系统邮箱服务器设置（SMTP）",
+    "setting.credentials.white_label": "企业设置",
     "setting.integration.add.application_tip": "选择您刚刚才网关中创建的应用。",
     "setting.integration.add.credential_tip": "请在网关的 Web GUI（网络服务器 - 应用程序）中创建一个应用程序，并粘贴以下生成的信息。",
     "setting.integration.api_status": "API状态",
@@ -6,11 +12,11 @@
     "setting.integration.api_status_ready": "API就绪",
     "setting.integration.api_status_waiting": "等待连接",
     "setting.integration.available_function": "可用功能",
-    "setting.integration.available_function_warning_text": "以下功能不可用，需要在集成配置中配置Open API后才能使用。",
+    "setting.integration.available_function_warning_text": "使用下方功能时，请先确保OpenAPI连接处于就绪状态。",
     "setting.integration.codec.customize_tip": "请输入编解码文件的地址用于对设备数据进行编解码。",
     "setting.integration.configuration": "集成配置",
     "setting.integration.data_access_service": "数据访问服务",
-    "setting.integration.device.sync_tip": "此操作将把您添加到网关的节点设备的有效负载编解码器重置为空。请谨慎操作。",
+    "setting.integration.device.sync_tip": "此操作会将对应的节点设备在网关上使用的负载编解码器置空，请谨慎操作。",
     "setting.integration.device.update_codec": "更新编解码文件",
     "setting.integration.device.update_codec_desc": "用于从指定获的地址获取最新的产品编解码器。注意：新的编解码器只对新添加的设备有效。",
     "setting.integration.device.update_codec_title": "更新编解码文件",
@@ -22,8 +28,6 @@
     "setting.integration.gateway.delete_tip": "删除网关也会删除其下的节点设备。您确定要删除网关及其下的节点设备吗？",
     "setting.integration.label.add_gateway": "添加网关",
     "setting.integration.label.application_id": "应用 ID",
-    "setting.integration.label.broken_address": "MQTT服务器地址",
-    "setting.integration.label.broken_port": "MQTT服务器端口",
     "setting.integration.label.choose_app": "选择应用",
     "setting.integration.label.codec_repo": "文件地址",
     "setting.integration.label.codec_repo_title": "自定义文件地址",
@@ -61,7 +65,6 @@
     "setting.integration.openapi_frequency_helper_text": "范围：30秒 - 86400秒",
     "setting.integration.openapi_frequency_of_request": "请求频率",
     "setting.integration.openapi_helper_text": "通过OpenAPI定期主动拉取设备信息和设备遥测数据。",
-    "setting.integration.param_client_id": "客户端ID",
     "setting.integration.param_client_secret": "客户端密钥",
     "setting.integration.param_server_address": "服务器地址",
     "setting.integration.service": "可用服务",
@@ -73,11 +76,5 @@
     "setting.integration.webhook_status_error": "Webhook错误",
     "setting.integration.webhook_status_ready": "Webhook就绪",
     "setting.integration.webhook_status_waiting": "等待配置",
-    "setting.integration.webhook_url": "Webhook URL",
-    "setting.credentials.white_label": "White Label",
-    "setting.credentials.smtp_addr": "SMTP服务器地址",
-    "setting.credentials.smtp_title": "系统邮件服务器设置（SMTP)",
-    "setting.credentials.edit_smtp": "编辑 SMTP",
-    "setting.credentials.edit_mqtt": "编辑 MQTT",
-    "setting.credentials.edit_http": "编辑 HTTP"
+    "setting.integration.webhook_url": "Webhook URL"
 }
