--- a/packages/locales/src/lang/en/setting.json
+++ b/packages/locales/src/lang/en/setting.json
@@ -1,4 +1,10 @@
 {
+    "setting.credentials.edit_http": "Edit HTTP Credential",
+    "setting.credentials.edit_mqtt": "Edit MQTT Credential",
+    "setting.credentials.edit_smtp": "Edit SMTP Settings",
+    "setting.credentials.smtp_addr": "SMTP Server Address",
+    "setting.credentials.smtp_title": "System Mail Server Settings（SMTP)",
+    "setting.credentials.white_label": "Enterprise Settings",
     "setting.integration.add.application_tip": "Select the ID of the application you just created in the gateway below.",
     "setting.integration.add.credential_tip": "Please create an application in the Web GUI of the gateway (Network Server - Application) and paste the generated information below into it.",
     "setting.integration.api_status": "API Status",
@@ -6,11 +12,11 @@
     "setting.integration.api_status_ready": "API Ready",
     "setting.integration.api_status_waiting": "Waiting For Connection",
     "setting.integration.available_function": "Available Function",
-    "setting.integration.available_function_warning_text": "The following functions are not available and need to be configured with Open API under integrated configuration before they can be used.",
-    "setting.integration.codec.customize_tip": "Please enter the Codec file address used for coding and decoding the device data..",
+    "setting.integration.available_function_warning_text": "When using the following features, make sure that the OpenAPI connection is in ready state.",
+    "setting.integration.codec.customize_tip": "Please enter the Codec file address used for coding and decoding the device data.",
     "setting.integration.configuration": "Integration Configuration",
     "setting.integration.data_access_service": "Data Access Service",
-    "setting.integration.device.sync_tip": "This operation will reset the Payload Codec of the node device you added to the gateway to empty. Please operate with caution.",
+    "setting.integration.device.sync_tip": "This will reset the Payload Codec of the node device (used in gateway) to empty. Please Proceed with caution.",
     "setting.integration.device.update_codec": "Updating Codec Files",
     "setting.integration.device.update_codec_desc": "Used to obtain the latest product codec from the specified acquired address. Note: The new codec is only valid for newly added devices.",
     "setting.integration.device.update_codec_title": "Update Codec File",
@@ -22,8 +28,6 @@
     "setting.integration.gateway.delete_tip": "Deleting a gateway will also delete the node devices under it. Are you sure you want to delete the gateway and the node devices under it?",
     "setting.integration.label.add_gateway": "Add Gateway",
     "setting.integration.label.application_id": "Application ID",
-    "setting.integration.label.broken_address": "Broker Address",
-    "setting.integration.label.broken_port": "Broker Port",
     "setting.integration.label.choose_app": "Choose an App",
     "setting.integration.label.codec_repo": "File address",
     "setting.integration.label.codec_repo_title": "Custom Codec File Address",
@@ -61,7 +65,6 @@
     "setting.integration.openapi_frequency_helper_text": "Range: 30s - 86400s",
     "setting.integration.openapi_frequency_of_request": "Frequency of requests",
     "setting.integration.openapi_helper_text": "Proactively pull device information and device telemetry data at regular intervals via OpenAPI.",
-    "setting.integration.param_client_id": "Client ID",
     "setting.integration.param_client_secret": "Client Secret",
     "setting.integration.param_server_address": "Server Address",
     "setting.integration.service": "Available Services",
@@ -73,11 +76,5 @@
     "setting.integration.webhook_status_error": "Webhook Error",
     "setting.integration.webhook_status_ready": "Webhook Ready",
     "setting.integration.webhook_status_waiting": "Waiting For Config",
-    "setting.integration.webhook_url": "Webhook URL",
-    "setting.credentials.white_label": "white Label",
-    "setting.credentials.smtp_addr": "SMTP Server Address",
-    "setting.credentials.smtp_title": "System mail server settings（SMTP)",
-    "setting.credentials.edit_smtp": "Edit SMTP",
-    "setting.credentials.edit_mqtt": "Edit MQTT",
-    "setting.credentials.edit_http": "Edit HTTP"
+    "setting.integration.webhook_url": "Webhook URL"
 }
