--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -9,6 +9,7 @@
     "workflow.editor.form_param_execution_time_queue": "Execution Time Queue",
     "workflow.editor.form_param_expire_time": "Expiration Time",
     "workflow.editor.form_param_select_placeholder": "Enter or reference a variable",
+    "workflow.editor.form_param_timer_period_everyday": "Everyday",
     "workflow.editor.form_param_timer_period_friday": "Friday",
     "workflow.editor.form_param_timer_period_monday": "Monday",
     "workflow.editor.form_param_timer_period_saturday": "Saturday",
@@ -16,6 +17,8 @@
     "workflow.editor.form_param_timer_period_thursday": "Thursday",
     "workflow.editor.form_param_timer_period_tuesday": "Tuesday",
     "workflow.editor.form_param_timer_period_wednesday": "Wednesday",
+    "workflow.editor.form_param_timer_period_weekday": "Working Days",
+    "workflow.editor.form_param_timer_period_weekend": "Weekend",
     "workflow.editor.form_param_timer_type": "Timer Types",
     "workflow.editor.form_param_timer_type_cycle": "Cycle Execution",
     "workflow.editor.form_param_timer_type_interval": "Interval Execution",
@@ -27,9 +30,20 @@
     "workflow.editor.log_title_test": "Test Logs",
     "workflow.editor.logs_popover_title_run": "Running Logs",
     "workflow.editor.logs_popover_title_test": "Test Logs",
+    "workflow.editor.move_mode_hand": "Hand Mode <b>Ctrl + H</b>",
+    "workflow.editor.move_mode_pointer": "Pointer Mode <b>Ctrl + V</b>",
     "workflow.editor.node_delete_confirm_desc": "Are you sure you want to delete this node?",
     "workflow.editor.node_delete_confirm_title": "Delete Nodes",
     "workflow.editor.node_test_tip": "Test this Node",
+    "workflow.editor.output_desc_mqtt_payload": "Load Content of the Message",
+    "workflow.editor.output_desc_mqtt_topic": "Topic of the Message",
+    "workflow.editor.output_desc_request_body": "Request Content",
+    "workflow.editor.output_desc_request_header": "Request Header",
+    "workflow.editor.output_desc_request_params": "Query params carried in the request",
+    "workflow.editor.output_desc_response_body": "Response Content",
+    "workflow.editor.output_desc_response_code": "Response Code",
+    "workflow.editor.output_desc_response_header": "Response Header",
+    "workflow.editor.output_desc_variables_in_path": "Variables in Path",
     "workflow.editor.save_warning_message": "The current workflow has been referenced. Saving will update the workflow information synchronously. Are you sure you want to save it?",
     "workflow.editor.valid.condition_not_setup": "Condition Not Setup",
     "workflow.email.content_modal_title": "Edit Email Content",
@@ -60,20 +74,27 @@
     "workflow.label.condition_operator_less_than_or_equal": "Less Than or Equal To",
     "workflow.label.condition_operator_not_contains": "Not Contains",
     "workflow.label.condition_operator_start_with": "Start With",
+    "workflow.label.connection_parameters": "Connection Parameters",
+    "workflow.label.cycle_connection_tip": "The connection between the nodes is invalid.",
     "workflow.label.design_mode_advanced_name": "Advanced Model",
     "workflow.label.design_mode_canvas_name": "Canvas Mode",
     "workflow.label.email_node_name": "Email Notification",
     "workflow.label.entry_node_number_limit_tip": "The workflow must have exactly {1} entry node and no more",
     "workflow.label.free_node_limit_tip": "No stray nodes allowed in the workflow",
     "workflow.label.handle_tooltip": "<b>Click</b> to add Node<br /><b>Drag</b> to connect",
+    "workflow.label.http_in_node_name": "HTTP Listener",
+    "workflow.label.http_node_name": "HTTP Request",
+    "workflow.label.httpin_node_desc": "Listen for incoming HTTP requests to trigger a running workflow. ",
     "workflow.label.ifelse_node_name": "IF/ELSE",
-    "workflow.label.listener_node_desc": "Triggers the workflow to run when the value of any of the listened-to entity objects changes.",
+    "workflow.label.import_from_curl": "Import from cURL",
+    "workflow.label.listener_node_desc": "Trigger the workflow to run whenever any listened entity's value changes. ",
     "workflow.label.listener_node_name": "Entity Listener",
     "workflow.label.logic_keyword_and": "AND",
     "workflow.label.logic_keyword_else": "ELSE",
     "workflow.label.logic_keyword_elseif": "ELIF",
     "workflow.label.logic_keyword_if": "IF",
     "workflow.label.logic_keyword_or": "OR",
+    "workflow.label.mqtt_node_desc": "Listen for incoming MQTT messages to trigger a running workflow.",
     "workflow.label.mqtt_node_name": "MQTT",
     "workflow.label.no_log_record": "No log is recorded",
     "workflow.label.node_category_action": "Action",
@@ -83,16 +104,22 @@
     "workflow.label.node_email_type": "Email Types",
     "workflow.label.node_id": "Node ID",
     "workflow.label.node_min_number_limit_tip": "The workflow must contain at least {1} node.",
+    "workflow.label.output_node_name": "Output",
+    "workflow.label.output_variables": "Output Variables",
     "workflow.label.parallel": "PARALLEL{1}",
     "workflow.label.parallel_depth_limit_tip": "Parallel Nesting Limited to {1} Level",
     "workflow.label.parallel_limit_tip": "Parallel Branches Limited to {1}",
     "workflow.label.param_type_other": "OTHER",
+    "workflow.label.placeholder_please_enter_curl": "Please enter the cURL command here.",
+    "workflow.label.placeholder_please_enter_json": "Please enter JSON",
+    "workflow.label.placeholder_please_enter_raw_text": "Please enter Raw text",
     "workflow.label.select_node_name": "Entity Selection",
     "workflow.label.service_node_name": "Service Invocation",
     "workflow.label.timer_node_desc": "Trigger a workflow run at regular intervals or periodically.",
     "workflow.label.timer_node_name": "Timer",
     "workflow.label.trigger_node_desc": "The running of the workflow is triggered manually by the user.",
     "workflow.label.trigger_node_name": "Trigger",
+    "workflow.label.use_system_smtp_settings": "Use system SMTP settings",
     "workflow.label.webhook_node_name": "Webhook Push",
     "workflow.message.delete_tip": "Are you sure you want to delete the workflow? It cannot be restore after deletion.",
     "workflow.message.import_dsl_error": "The DSL file contains errors. Please update the file and try again.",
@@ -114,41 +141,14 @@
     "workflow.valid.invalid_node_type": "The {1} node type is invalid.",
     "workflow.valid.invalid_timer_interval": "The timer interval must be less than {1}.",
     "workflow.valid.invalid_url": "The {1} field value is not a valid URL.",
+    "workflow.valid.invalid_url_path": "The {1} field must start with /, supporting alphanumeric and {2} formats.",
     "workflow.valid.max_length": "The {1} field length of the value you entered cannot exceed {2} digits.",
     "workflow.valid.min_length": "The {1} field length of the value you entered should be greater than or equal to {0}.",
     "workflow.valid.node_id_duplicated": "{1} and {2} node IDs are duplicated.",
     "workflow.valid.node_parameters_required": "The {1} node parameters is required.",
+    "workflow.valid.output_node_limit_count_tip": "Only one output node is allowed in a workflow.",
+    "workflow.valid.output_node_limit_has_trigger_tip": "When a workflow contains output nodes, the start node must be a trigger node.",
     "workflow.valid.parameter_required": "The {1} node parameter is required.",
     "workflow.valid.range_length": "The length of the {1} field value should be greater than or equal to {2} and less than or equal to {3}.",
-    "workflow.valid.required": "The {1} field is required.",
-    "workflow.editor.form_param_timer_period_weekday": "Weekday",
-    "workflow.editor.form_param_timer_period_weekend": "Weekend",
-    "workflow.editor.form_param_timer_period_everyday": "Everyday",
-    "workflow.label.output_node_name": "Output",
-    "workflow.valid.output_node_limit_has_trigger_tip": "The workflow has output node and the entry node must be trigger node.",
-    "workflow.valid.output_node_limit_count_tip": "Only one Output node is allowed in the workflow.",
-    "workflow.label.http_node_name": "HTTP",
-    "workflow.label.http_in_node_name": "HTTP in",
-    "workflow.label.import_from_curl": "Import from cURL",
-    "workflow.label.placeholder_please_enter_curl": "Please enter the cURL command here...",
-    "workflow.label.placeholder_please_enter_json": "Please enter JSON",
-    "workflow.label.placeholder_please_enter_raw_text": "Please enter Raw Text",
-    "workflow.editor.move_mode_pointer": "Pointer Mode <b>Ctrl + V</b>",
-    "workflow.editor.move_mode_hand": "Hand Mode <b>Ctrl + H</b>",
-    "workflow.editor.output_desc_request_header": "Request header",
-    "workflow.editor.output_desc_request_body": "Request content",
-    "workflow.editor.output_desc_variables_in_path": "Variables in path",
-    "workflow.editor.output_desc_mqtt_topic": "Topic of the message",
-    "workflow.editor.output_desc_mqtt_payload": "Load content of message",
-    "workflow.editor.output_desc_response_header": "Response header",
-    "workflow.editor.output_desc_response_body": "Response Content",
-    "workflow.editor.output_desc_response_code": "Response Code",
-    "workflow.label.httpin_node_desc": "Listen for incoming HTTP requests to trigger a running workflow. ",
-    "workflow.label.mqtt_node_desc": "Listen for incoming MQTT messages to trigger a running workflow.",
-    "workflow.label.connection_parameters": "Connection Parameters",
-    "workflow.label.output_variables": "Output Variables",
-    "workflow.valid.invalid_url_path": "The {1} field must start with /, support alphanumeric and {2} formats.",
-    "workflow.label.use_system_smtp_settings": "Use system SMTP settings",
-    "workflow.editor.output_desc_request_params": "Query params carried in the request",
-    "workflow.label.cycle_connection_tip": "Circular connections cannot occur in the workflow."
+    "workflow.valid.required": "The {1} field is required."
 }
