--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -15,12 +15,15 @@
   "common.label.add": "添加",
   "common.label.back": "返回",
   "common.label.banned": "禁止",
+  "common.label.broker_address": "Broker地址",
+  "common.label.broker_port": "Broker端口号",
   "common.label.bulk_deletion": "批量删除",
   "common.label.bulk_removal": "批量移除",
   "common.label.by_device": "基于设备",
   "common.label.choices": "待选择",
   "common.label.chosen": "已选",
   "common.label.click_to_try_fix": "点击尝试修复",
+  "common.label.client_id": "客户端ID",
   "common.label.close": "关闭",
   "common.label.confirm_password": "确认密码",
   "common.label.connect": "连接",
@@ -31,6 +34,8 @@
   "common.label.create_time": "创建时间",
   "common.label.creator": "创建者",
   "common.label.dashboard": "仪表板",
+  "common.label.data_encoding_format": "数据编码格式",
+  "common.label.data_source": "数据源",
   "common.label.data_type": "数据类型",
   "common.label.day": "{1} 天",
   "common.label.days": "{1} 天",
@@ -44,6 +49,7 @@
   "common.label.empty": "无数据",
   "common.label.enable_status": "启用状态",
   "common.label.enable_title": "启用{1}",
+  "common.label.end_date": "结束时间",
   "common.label.entity": "实体",
   "common.label.error": "错误",
   "common.label.export": "导出",
@@ -54,12 +60,14 @@
   "common.label.import": "导入",
   "common.label.input": "输入",
   "common.label.integration": "集成",
+  "common.label.invisible": "不可见",
   "common.label.json": "JSON",
   "common.label.key": "键",
   "common.label.label": "标签",
   "common.label.language": "语言",
   "common.label.last_modified_time": "最后更新时间",
   "common.label.loading": "加载中...",
+  "common.label.local_upload": "本地上传",
   "common.label.log": "日志",
   "common.label.login": "登录",
   "common.label.max": "最大",
@@ -86,10 +94,12 @@
   "common.label.removal": "移除",
   "common.label.remove": "移除",
   "common.label.rename": "重命名",
+  "common.label.required": "必填",
   "common.label.run": "运行",
   "common.label.search": "搜索",
   "common.label.second": "{1} 秒",
   "common.label.seconds": "{1} 秒",
+  "common.label.select_entity": "选择实体",
   "common.label.selected": "选中",
   "common.label.service": "服务",
   "common.label.setting": "设置",
@@ -97,7 +107,9 @@
   "common.label.sign_out": "登出",
   "common.label.sort_type_newest_to_oldest": "最新至最早",
   "common.label.sort_type_oldest_to_newest": "最早至最新",
+  "common.label.start_date": "起始时间",
   "common.label.success": "成功",
+  "common.label.system": "系统",
   "common.label.table_disabled_status": "禁用状态",
   "common.label.target": "目标",
   "common.label.test": "测试",
@@ -108,10 +120,13 @@
   "common.label.type": "类型",
   "common.label.unit": "单位",
   "common.label.update_time": "更新时间",
+  "common.label.upload_image": "上传图片",
+  "common.label.uploading": "上传中",
   "common.label.url": "URL",
   "common.label.username": "用户名",
   "common.label.value": "值",
   "common.label.version": "版本",
+  "common.label.visible": "可见",
   "common.label.webhook": "Webhook",
   "common.label.week": "星期",
   "common.label.workflow": "工作流",
@@ -121,6 +136,7 @@
   "common.language.en": "English",
   "common.language.en_short": "EN",
   "common.message.add_success": "添加成功。",
+  "common.message.click_to_upload_file": "点击或拖拽文件至此区域进行上传。",
   "common.message.copy_successful": "复制成功。",
   "common.message.delete_success": "删除成功。",
   "common.message.error_user_business_details_not_exist": "用户无商务参数",
@@ -130,6 +146,11 @@
   "common.message.register_helper_text": "欢迎！让我们开始创建一个用户账户。",
   "common.message.remove_success": "移除成功",
   "common.message.something_wrong_title": "出错了",
+  "common.message.upload_error_file_invalid_type": "文件类型必须为{1}。",
+  "common.message.upload_error_file_too_large": "文件大小大于{1}。",
+  "common.message.upload_error_file_too_small": "文件大小小于{1}。",
+  "common.message.upload_error_server_error": "上传失败，请稍后重试。",
+  "common.message.upload_error_too_many_files": "仅支持上传一张图片",
   "common.modal.desc_leave_current_page": "您所调整的内容不会保存，是否确认离开此页面？",
   "common.modal.title_leave_current_page": "离开当前页面",
   "common.placeholder.input": "请输入",
@@ -166,24 +187,32 @@
   "dashboard.label_nearly_three_month": "近三个月",
   "dashboard.label_nearly_twelve_hours": "近12小时",
   "dashboard.label_sum_value": "总值",
+  "dashboard.label.left_y_axis": "左Y轴",
+  "dashboard.label.right_y_axis": "右Y轴",
+  "dashboard.label.y_axis": "Y轴",
   "dashboard.leave_to_new_dashboard_description": "是否要跳转至新创建的仪表盘，请注意当前仪表盘您修改的内容不会被保存。",
   "dashboard.plugin_class_data_card": "数据展示",
   "dashboard.plugin_class_data_chart": "数据图表",
   "dashboard.plugin_class_operate": "可操作组件",
   "dashboard.plugin_class_other": "其他",
   "dashboard.plugin.trigger_confirm_text": "是否确认执行此操作？",
+  "dashboard.set_as_home_dashboard_description": "是否确认将当前仪表盘设为设置为主仪表盘，该操作将会覆盖掉原有的主仪表盘？",
+  "dashboard.set_as_home_dashboard_tip": "置顶仪表盘",
   "dashboard.switch_title_off": "Off",
   "dashboard.switch_title_on": "On",
+  "dashboard.unset_as_home_dashboard_tip": "取消置顶",
   "device.detail.basic_info": "基本信息",
   "device.detail.entity_data": "实体数据",
   "device.label.param_device_id": "设备ID",
   "device.label.param_device_name": "设备名称",
-  "device.label.param_entity_id": "实体ID",
+  "device.label.param_entity_id": "实体 ID",
   "device.label.param_entity_name": "实体名称",
-  "device.label.param_external_id": "外部ID",
+  "device.label.param_external_id": "外部设备 ID",
   "device.label.param_founder": "创建者",
   "device.label.param_source": "来源",
   "device.message.delete_tip": "确定要删除吗？",
+  "entity.label.bool_enum_false": "False 的值",
+  "entity.label.bool_enum_true": "True 的值",
   "entity.label.create_entity_from_workflow": "基于工作流创建",
   "entity.label.create_entity_only": "仅创建实体",
   "entity.label.create_property": "创建属性",
@@ -200,14 +229,16 @@
   "entity.label.entity_type_of_access_write": "只写",
   "entity.label.entity_type_of_boolean": "BOOLEAN",
   "entity.label.entity_type_of_double": "DOUBLE",
+  "entity.label.entity_type_of_enum": "ENUM",
   "entity.label.entity_type_of_long": "LONG",
   "entity.label.entity_type_of_string": "STRING",
+  "entity.label.enumeration_items": "枚举项",
   "entity.label.historical_data": "历史数据",
   "entity.label.set_enumeration_items": "设置枚举项",
   "entity.label.set_value": "设置值",
   "entity.label.value_source": "值来源",
   "error.http.account_session_logout": "您的账户已退出登录。",
-  "error.http.authentication_failed": "认证失败/未认证",
+  "error.http.authentication_failed": "账户不存在或密码错误，请重新输入。",
   "error.http.dashboard_name_exist": "仪表板名称已存在",
   "error.http.data_no_found": "数据未找到",
   "error.http.forbidden_permission": "没有访问权限，访问被禁止。",
@@ -225,6 +256,12 @@
   "error.http.token_not_found": "您的账户尚未登录。",
   "error.http.user_has_no_permission": "当前用户无权限",
   "error.http.user_register_email_exist": "用户注册邮箱已存在。",
+  "setting.credentials.edit_http": "编辑HTTP凭证",
+  "setting.credentials.edit_mqtt": "编辑MQTT凭证",
+  "setting.credentials.edit_smtp": "编辑 SMTP 设置",
+  "setting.credentials.smtp_addr": "SMTP 服务器地址",
+  "setting.credentials.smtp_title": "系统邮箱服务器设置（SMTP）",
+  "setting.credentials.white_label": "企业设置",
   "setting.integration.add.application_tip": "选择您刚刚才网关中创建的应用。",
   "setting.integration.add.credential_tip": "请在网关的 Web GUI（网络服务器 - 应用程序）中创建一个应用程序，并粘贴以下生成的信息。",
   "setting.integration.api_status": "API状态",
@@ -232,7 +269,7 @@
   "setting.integration.api_status_ready": "API就绪",
   "setting.integration.api_status_waiting": "等待连接",
   "setting.integration.available_function": "可用功能",
-  "setting.integration.available_function_warning_text": "以下功能不可用，需要在集成配置中配置Open API后才能使用。",
+  "setting.integration.available_function_warning_text": "使用下方功能时，请先确保OpenAPI连接处于就绪状态。",
   "setting.integration.codec.customize_tip": "请输入编解码文件的地址用于对设备数据进行编解码。",
   "setting.integration.configuration": "集成配置",
   "setting.integration.data_access_service": "数据访问服务",
@@ -248,8 +285,6 @@
   "setting.integration.gateway.delete_tip": "删除网关也会删除其下的节点设备。您确定要删除网关及其下的节点设备吗？",
   "setting.integration.label.add_gateway": "添加网关",
   "setting.integration.label.application_id": "应用 ID",
-  "setting.integration.label.broken_address": "MQTT服务器地址",
-  "setting.integration.label.broken_port": "MQTT服务器端口",
   "setting.integration.label.choose_app": "选择应用",
   "setting.integration.label.codec_repo": "文件地址",
   "setting.integration.label.codec_repo_title": "自定义文件地址",
@@ -287,7 +322,6 @@
   "setting.integration.openapi_frequency_helper_text": "范围：30秒 - 86400秒",
   "setting.integration.openapi_frequency_of_request": "请求频率",
   "setting.integration.openapi_helper_text": "通过OpenAPI定期主动拉取设备信息和设备遥测数据。",
-  "setting.integration.param_client_id": "客户端ID",
   "setting.integration.param_client_secret": "客户端密钥",
   "setting.integration.param_server_address": "服务器地址",
   "setting.integration.service": "可用服务",
@@ -328,8 +362,8 @@
   "user.role.integration_permission_add_tip": "添加集成后将允许访问该集成下的所有设备和独立于设备外的实体数据。",
   "user.role.integration_permission_modal_title": "添加集成权限",
   "user.role.members_tab_title": "成员",
-  "user.role.model_table_title": "型号",
-  "user.role.page_table_title": "页",
+  "user.role.model_table_title": "功能模块",
+  "user.role.page_table_title": "功能页面",
   "user.role.resource_dashboard_tab_title": "仪表盘权限",
   "user.role.resource_device_tab_title": "设备权限",
   "user.role.resource_integration_tab_title": "集成权限",
@@ -340,7 +374,6 @@
   "user.role.single_integration_remove_tip": "移除之后，将不可访问改集成下的所有设备和独立于设备外的实体，是否确认移除集成：{0}？",
   "user.role.single_member_remove_tip": "是否确认要移除用户：{0}？",
   "user.role.users_tab_name": "用户",
-  "valid_http_address": "无效地址",
   "valid.date.selected_time_greater_than_now_time": "不支持早于当前时间的时间。",
   "valid.date.start_time_greater_than_end_time": "开始时间不能晚于结束时间。",
   "valid.date.start_time_less_than_pre_end_time": "开始时间不能早于上次结束时间。",
@@ -368,6 +401,7 @@
   "valid.input.letters": "仅限字母（大小写）。",
   "valid.input.letters_and_num": "仅限字母和数字（大小写）。",
   "valid.input.mac": "请输入MAC地址。",
+  "valid.input.match_regexp": "请输入符合正则表达式的有效值:{1}。",
   "valid.input.max_length": "输入字符的长度不能超过{1}位。",
   "valid.input.max_value": "输入值的最大值不能超过{0}。",
   "valid.input.min_length": "输入值的长度应大于或等于{0}。",
@@ -397,6 +431,7 @@
   "valid.input.start_with_normal_char": "格式要求：输入必须以小写字母（a-z）、大写字母（A-Z）、数字（0-9）或下划线（_）开头。",
   "valid.input.start_with_ws_wss": "请输入有效的URL，必须以ws://或wss://开头。",
   "valid.input.step_value": "请输入{0}的倍数。",
+  "valid.input.string_letter_num_special_char": "仅支持大写字母、小写字母、数字 、 \"_\" 和 \"-\"。",
   "valid.input.string_rules_one": "ASCII应包含大写字母、小写字母、数字或_、-，且不允许空格。",
   "valid.input.string_rules_two": "仅允许大写字母、小写字母、数字和!\"#$%&'()*+,-./:;<=>@[]^_`{|}~。",
   "valid.input.two_sixteen_hexadecimal": "请输入两个16位十六进制值，用“-”分隔。",
@@ -415,6 +450,7 @@
   "workflow.editor.form_param_execution_time_queue": "执行时间队列",
   "workflow.editor.form_param_expire_time": "过期时间",
   "workflow.editor.form_param_select_placeholder": "输入或引用变量",
+  "workflow.editor.form_param_timer_period_everyday": "每天",
   "workflow.editor.form_param_timer_period_friday": "星期五",
   "workflow.editor.form_param_timer_period_monday": "星期一",
   "workflow.editor.form_param_timer_period_saturday": "星期六",
@@ -422,6 +458,8 @@
   "workflow.editor.form_param_timer_period_thursday": "星期四",
   "workflow.editor.form_param_timer_period_tuesday": "星期二",
   "workflow.editor.form_param_timer_period_wednesday": "星期三",
+  "workflow.editor.form_param_timer_period_weekday": "工作日",
+  "workflow.editor.form_param_timer_period_weekend": "周末",
   "workflow.editor.form_param_timer_type": "定时器类型",
   "workflow.editor.form_param_timer_type_cycle": "周期执行",
   "workflow.editor.form_param_timer_type_interval": "间隔执行",
@@ -433,9 +471,20 @@
   "workflow.editor.log_title_test": "测试日志",
   "workflow.editor.logs_popover_title_run": "运行日志",
   "workflow.editor.logs_popover_title_test": "测试日志",
+  "workflow.editor.move_mode_hand": "移动画布 <b>Ctrl + H</b>",
+  "workflow.editor.move_mode_pointer": "光标模式 <b>Ctrl + V</b>",
   "workflow.editor.node_delete_confirm_desc": "确认删除节点？",
   "workflow.editor.node_delete_confirm_title": "删除节点",
   "workflow.editor.node_test_tip": "测试此节点",
+  "workflow.editor.output_desc_mqtt_payload": "消息内容",
+  "workflow.editor.output_desc_mqtt_topic": "消息主题",
+  "workflow.editor.output_desc_request_body": "请求内容",
+  "workflow.editor.output_desc_request_header": "请求头",
+  "workflow.editor.output_desc_request_params": "请求中携带的查询参数",
+  "workflow.editor.output_desc_response_body": "响应内容",
+  "workflow.editor.output_desc_response_code": "响应码",
+  "workflow.editor.output_desc_response_header": "响应头",
+  "workflow.editor.output_desc_variables_in_path": "路径中的变量",
   "workflow.editor.save_warning_message": "当前工作流程已被引用，保存它将同步更新工作流程信息。您确定要保存?",
   "workflow.editor.valid.condition_not_setup": "条件未设置",
   "workflow.email.content_modal_title": "编辑邮件内容",
@@ -466,20 +515,27 @@
   "workflow.label.condition_operator_less_than_or_equal": "小于等于",
   "workflow.label.condition_operator_not_contains": "不包含",
   "workflow.label.condition_operator_start_with": "起始于",
+  "workflow.label.connection_parameters": "连接参数",
+  "workflow.label.cycle_connection_tip": "节点之间的连接不合法。",
   "workflow.label.design_mode_advanced_name": "高级模式",
   "workflow.label.design_mode_canvas_name": "画布模式",
   "workflow.label.email_node_name": "邮件通知",
   "workflow.label.entry_node_number_limit_tip": "工作流中必须且仅允许有 {1} 个入口节点",
   "workflow.label.free_node_limit_tip": "工作流中不允许有游离节点",
   "workflow.label.handle_tooltip": "<b>点击</b> 去添加节点<br /><b>拖着</b> 去连接节点",
+  "workflow.label.http_in_node_name": "HTTP 监听",
+  "workflow.label.http_node_name": "HTTP 请求",
+  "workflow.label.httpin_node_desc": "监听进入的HTTP请求以触发工作流的运行。",
   "workflow.label.ifelse_node_name": "IF/ELSE 判断",
-  "workflow.label.listener_node_desc": "根据监听实体对象的变化作为触发运行整个工作流程的条件，无需主动触发，起始节点为实体监听节点。",
+  "workflow.label.import_from_curl": "导入 cURL",
+  "workflow.label.listener_node_desc": "当任一被监听的实体对象的值发生变化时，触发工作流运行。",
   "workflow.label.listener_node_name": "实体监听",
   "workflow.label.logic_keyword_and": "AND",
   "workflow.label.logic_keyword_else": "ELSE",
   "workflow.label.logic_keyword_elseif": "ELIF",
   "workflow.label.logic_keyword_if": "IF",
   "workflow.label.logic_keyword_or": "OR",
+  "workflow.label.mqtt_node_desc": "监听进入的MQTT消息触发工作流的运行。",
   "workflow.label.mqtt_node_name": "MQTT",
   "workflow.label.no_log_record": "无日志记录",
   "workflow.label.node_category_action": "动作类",
@@ -489,16 +545,22 @@
   "workflow.label.node_email_type": "邮件类型",
   "workflow.label.node_id": "节点 ID",
   "workflow.label.node_min_number_limit_tip": "工作流中至少需要有 {1} 个节点。",
+  "workflow.label.output_node_name": "输出节点",
+  "workflow.label.output_variables": "输出参数",
   "workflow.label.parallel": "并行{1}",
   "workflow.label.parallel_depth_limit_tip": "并行嵌套层数限制 {1} 层",
   "workflow.label.parallel_limit_tip": "并行分支限制为 {1} 个",
   "workflow.label.param_type_other": "其他",
+  "workflow.label.placeholder_please_enter_curl": "请在此处输入cuURL指令。",
+  "workflow.label.placeholder_please_enter_json": "请输入JSON",
+  "workflow.label.placeholder_please_enter_raw_text": "请输出RAW文本",
   "workflow.label.select_node_name": "实体选择",
   "workflow.label.service_node_name": "服务调用",
-  "workflow.label.timer_node_desc": "基于定时或周期去作为触发整个工作流运行的条件，无需主动触发，起始节点是定时器节点。",
+  "workflow.label.timer_node_desc": "定时或定期触发工作流程运行。",
   "workflow.label.timer_node_name": "定时器",
-  "workflow.label.trigger_node_desc": "需要由用户手动触发从而运行整个工作流，起始节点是一个触发器节点，当触发时允许设置输入参数。",
+  "workflow.label.trigger_node_desc": "工作流的运行由用户手动触发。",
   "workflow.label.trigger_node_name": "触发器",
+  "workflow.label.use_system_smtp_settings": "使用系统 SMTP 设置",
   "workflow.label.webhook_node_name": "Webhook 推送",
   "workflow.message.delete_tip": "是否确认删除工作流？删除后无法恢复。",
   "workflow.message.import_dsl_error": "DSL 文件包含错误。请更新文件并重试。",
@@ -520,10 +582,13 @@
   "workflow.valid.invalid_node_type": "{1} 节点类型无效。",
   "workflow.valid.invalid_timer_interval": "时间间隔必须小于 {1}。",
   "workflow.valid.invalid_url": "{1} 字段值不是有效的 URL。",
+  "workflow.valid.invalid_url_path": "{1}字段必须由/开头 ，支持字母数字和 {2} 格式。",
   "workflow.valid.max_length": "输入值的 {1} 字段长度不能超过 {2} 位数。",
   "workflow.valid.min_length": "您输入值的 {1} 字段长度应大于或等于 {0}。",
   "workflow.valid.node_id_duplicated": "{1} 和 {2} 节点 ID 重复。",
   "workflow.valid.node_parameters_required": "需要 {1} 节点参数。",
+  "workflow.valid.output_node_limit_count_tip": "一个工作流中仅允许存在一个输出节点。",
+  "workflow.valid.output_node_limit_has_trigger_tip": "当工作流中存在输出节点时，起始节点必须为触发器节点。",
   "workflow.valid.parameter_required": "{1} 节点参数为必填项。",
   "workflow.valid.range_length": "{1} 字段值的长度应大于或等于 {2}，小于或等于 {3}。",
   "workflow.valid.required": "{1}字段为必填字段。"
