--- a/packages/locales/src/lang/cn/user.json
+++ b/packages/locales/src/lang/cn/user.json
@@ -27,8 +27,8 @@
     "user.role.integration_permission_add_tip": "添加集成后将允许访问该集成下的所有设备和独立于设备外的实体数据。",
     "user.role.integration_permission_modal_title": "添加集成权限",
     "user.role.members_tab_title": "成员",
-    "user.role.model_table_title": "型号",
-    "user.role.page_table_title": "页",
+    "user.role.model_table_title": "功能模块",
+    "user.role.page_table_title": "功能页面",
     "user.role.resource_dashboard_tab_title": "仪表盘权限",
     "user.role.resource_device_tab_title": "设备权限",
     "user.role.resource_integration_tab_title": "集成权限",
