--- a/packages/locales/src/lang/cn/workflow.json
+++ b/packages/locales/src/lang/cn/workflow.json
@@ -9,6 +9,7 @@
     "workflow.editor.form_param_execution_time_queue": "执行时间队列",
     "workflow.editor.form_param_expire_time": "过期时间",
     "workflow.editor.form_param_select_placeholder": "输入或引用变量",
+    "workflow.editor.form_param_timer_period_everyday": "每天",
     "workflow.editor.form_param_timer_period_friday": "星期五",
     "workflow.editor.form_param_timer_period_monday": "星期一",
     "workflow.editor.form_param_timer_period_saturday": "星期六",
@@ -16,6 +17,8 @@
     "workflow.editor.form_param_timer_period_thursday": "星期四",
     "workflow.editor.form_param_timer_period_tuesday": "星期二",
     "workflow.editor.form_param_timer_period_wednesday": "星期三",
+    "workflow.editor.form_param_timer_period_weekday": "工作日",
+    "workflow.editor.form_param_timer_period_weekend": "周末",
     "workflow.editor.form_param_timer_type": "定时器类型",
     "workflow.editor.form_param_timer_type_cycle": "周期执行",
     "workflow.editor.form_param_timer_type_interval": "间隔执行",
@@ -27,9 +30,20 @@
     "workflow.editor.log_title_test": "测试日志",
     "workflow.editor.logs_popover_title_run": "运行日志",
     "workflow.editor.logs_popover_title_test": "测试日志",
+    "workflow.editor.move_mode_hand": "移动画布 <b>Ctrl + H</b>",
+    "workflow.editor.move_mode_pointer": "光标模式 <b>Ctrl + V</b>",
     "workflow.editor.node_delete_confirm_desc": "确认删除节点？",
     "workflow.editor.node_delete_confirm_title": "删除节点",
     "workflow.editor.node_test_tip": "测试此节点",
+    "workflow.editor.output_desc_mqtt_payload": "消息内容",
+    "workflow.editor.output_desc_mqtt_topic": "消息主题",
+    "workflow.editor.output_desc_request_body": "请求内容",
+    "workflow.editor.output_desc_request_header": "请求头",
+    "workflow.editor.output_desc_request_params": "请求中携带的查询参数",
+    "workflow.editor.output_desc_response_body": "响应内容",
+    "workflow.editor.output_desc_response_code": "响应码",
+    "workflow.editor.output_desc_response_header": "响应头",
+    "workflow.editor.output_desc_variables_in_path": "路径中的变量",
     "workflow.editor.save_warning_message": "当前工作流程已被引用，保存它将同步更新工作流程信息。您确定要保存?",
     "workflow.editor.valid.condition_not_setup": "条件未设置",
     "workflow.email.content_modal_title": "编辑邮件内容",
@@ -60,20 +74,27 @@
     "workflow.label.condition_operator_less_than_or_equal": "小于等于",
     "workflow.label.condition_operator_not_contains": "不包含",
     "workflow.label.condition_operator_start_with": "起始于",
+    "workflow.label.connection_parameters": "连接参数",
+    "workflow.label.cycle_connection_tip": "节点之间的连接不合法。",
     "workflow.label.design_mode_advanced_name": "高级模式",
     "workflow.label.design_mode_canvas_name": "画布模式",
     "workflow.label.email_node_name": "邮件通知",
     "workflow.label.entry_node_number_limit_tip": "工作流中必须且仅允许有 {1} 个入口节点",
     "workflow.label.free_node_limit_tip": "工作流中不允许有游离节点",
     "workflow.label.handle_tooltip": "<b>点击</b> 去添加节点<br /><b>拖着</b> 去连接节点",
+    "workflow.label.http_in_node_name": "HTTP 监听",
+    "workflow.label.http_node_name": "HTTP 请求",
+    "workflow.label.httpin_node_desc": "监听进入的HTTP请求以触发工作流的运行。",
     "workflow.label.ifelse_node_name": "IF/ELSE 判断",
-    "workflow.label.listener_node_desc": "根据监听实体对象的变化作为触发运行整个工作流程的条件，无需主动触发，起始节点为实体监听节点。",
+    "workflow.label.import_from_curl": "导入 cURL",
+    "workflow.label.listener_node_desc": "当任一被监听的实体对象的值发生变化时，触发工作流运行。",
     "workflow.label.listener_node_name": "实体监听",
     "workflow.label.logic_keyword_and": "AND",
     "workflow.label.logic_keyword_else": "ELSE",
     "workflow.label.logic_keyword_elseif": "ELIF",
     "workflow.label.logic_keyword_if": "IF",
     "workflow.label.logic_keyword_or": "OR",
+    "workflow.label.mqtt_node_desc": "监听进入的MQTT消息触发工作流的运行。",
     "workflow.label.mqtt_node_name": "MQTT",
     "workflow.label.no_log_record": "无日志记录",
     "workflow.label.node_category_action": "动作类",
@@ -83,16 +104,22 @@
     "workflow.label.node_email_type": "邮件类型",
     "workflow.label.node_id": "节点 ID",
     "workflow.label.node_min_number_limit_tip": "工作流中至少需要有 {1} 个节点。",
+    "workflow.label.output_node_name": "输出节点",
+    "workflow.label.output_variables": "输出参数",
     "workflow.label.parallel": "并行{1}",
     "workflow.label.parallel_depth_limit_tip": "并行嵌套层数限制 {1} 层",
     "workflow.label.parallel_limit_tip": "并行分支限制为 {1} 个",
     "workflow.label.param_type_other": "其他",
+    "workflow.label.placeholder_please_enter_curl": "请在此处输入cuURL指令。",
+    "workflow.label.placeholder_please_enter_json": "请输入JSON",
+    "workflow.label.placeholder_please_enter_raw_text": "请输出RAW文本",
     "workflow.label.select_node_name": "实体选择",
     "workflow.label.service_node_name": "服务调用",
-    "workflow.label.timer_node_desc": "基于定时或周期去作为触发整个工作流运行的条件，无需主动触发，起始节点是定时器节点。",
+    "workflow.label.timer_node_desc": "定时或定期触发工作流程运行。",
     "workflow.label.timer_node_name": "定时器",
-    "workflow.label.trigger_node_desc": "需要由用户手动触发从而运行整个工作流，起始节点是一个触发器节点，当触发时允许设置输入参数。",
+    "workflow.label.trigger_node_desc": "工作流的运行由用户手动触发。",
     "workflow.label.trigger_node_name": "触发器",
+    "workflow.label.use_system_smtp_settings": "使用系统 SMTP 设置",
     "workflow.label.webhook_node_name": "Webhook 推送",
     "workflow.message.delete_tip": "是否确认删除工作流？删除后无法恢复。",
     "workflow.message.import_dsl_error": "DSL 文件包含错误。请更新文件并重试。",
@@ -114,10 +141,13 @@
     "workflow.valid.invalid_node_type": "{1} 节点类型无效。",
     "workflow.valid.invalid_timer_interval": "时间间隔必须小于 {1}。",
     "workflow.valid.invalid_url": "{1} 字段值不是有效的 URL。",
+    "workflow.valid.invalid_url_path": "{1}字段必须由/开头 ，支持字母数字和 {2} 格式。",
     "workflow.valid.max_length": "输入值的 {1} 字段长度不能超过 {2} 位数。",
     "workflow.valid.min_length": "您输入值的 {1} 字段长度应大于或等于 {0}。",
     "workflow.valid.node_id_duplicated": "{1} 和 {2} 节点 ID 重复。",
     "workflow.valid.node_parameters_required": "需要 {1} 节点参数。",
+    "workflow.valid.output_node_limit_count_tip": "一个工作流中仅允许存在一个输出节点。",
+    "workflow.valid.output_node_limit_has_trigger_tip": "当工作流中存在输出节点时，起始节点必须为触发器节点。",
     "workflow.valid.parameter_required": "{1} 节点参数为必填项。",
     "workflow.valid.range_length": "{1} 字段值的长度应大于或等于 {2}，小于或等于 {3}。",
     "workflow.valid.required": "{1}字段为必填字段。"
