--- a/packages/locales/src/lang/en/entity.json
+++ b/packages/locales/src/lang/en/entity.json
@@ -1,4 +1,6 @@
 {
+    "entity.label.bool_enum_false": "Value of False",
+    "entity.label.bool_enum_true": "Value of True",
     "entity.label.create_entity_from_workflow": "Create from Workflow",
     "entity.label.create_entity_only": "Create Entity Only",
     "entity.label.create_property": "Create Property",
@@ -15,14 +17,12 @@
     "entity.label.entity_type_of_access_write": "W",
     "entity.label.entity_type_of_boolean": "BOOLEAN",
     "entity.label.entity_type_of_double": "DOUBLE",
+    "entity.label.entity_type_of_enum": "ENUM",
     "entity.label.entity_type_of_long": "LONG",
     "entity.label.entity_type_of_string": "STRING",
-    "entity.label.entity_type_of_enum": "ENUM",
+    "entity.label.enumeration_items": "Enumeration Items",
     "entity.label.historical_data": "Historical Data",
     "entity.label.set_enumeration_items": "Set Enumeration Items",
-    "entity.label.enumeration_items": "Enumeration Items",
     "entity.label.set_value": "Set Value",
-    "entity.label.value_source": "Value Source",
-    "entity.label.bool_enum_true": "Value of True",
-    "entity.label.bool_enum_false": "Value of False"
+    "entity.label.value_source": "Value Source"
 }
