--- a/packages/locales/src/lang/cn/workflow.json
+++ b/packages/locales/src/lang/cn/workflow.json
@@ -150,5 +150,6 @@
     "workflow.valid.output_node_limit_has_trigger_tip": "当工作流中存在输出节点时，起始节点必须为触发器节点。",
     "workflow.valid.parameter_required": "{1} 节点参数为必填项。",
     "workflow.valid.range_length": "{1} 字段值的长度应大于或等于 {2}，小于或等于 {3}。",
-    "workflow.valid.required": "{1}字段为必填字段。"
+    "workflow.valid.required": "{1}字段为必填字段。",
+    "workflow.valid.invalid_reference_param": "{1}字段所引用的参数无效。"
 }
