--- a/packages/locales/src/lang/cn/workflow.json
+++ b/packages/locales/src/lang/cn/workflow.json
@@ -151,5 +151,6 @@
     "workflow.valid.parameter_required": "{1} 节点参数为必填项。",
     "workflow.valid.range_length": "{1} 字段值的长度应大于或等于 {2}，小于或等于 {3}。",
     "workflow.valid.required": "{1}字段为必填字段。",
-    "workflow.valid.invalid_reference_param": "{1}字段所引用的参数无效。"
+    "workflow.valid.invalid_reference_param": "{1}字段所引用的参数无效。",
+    "workflow.editor.helper_text_set_content_type_in_header": "请在 Header 中设置 Content-Type"
 }
