--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -151,5 +151,6 @@
     "workflow.valid.parameter_required": "The {1} node parameter is required.",
     "workflow.valid.range_length": "The length of the {1} field value should be greater than or equal to {2} and less than or equal to {3}.",
     "workflow.valid.required": "The {1} field is required.",
-    "workflow.valid.invalid_reference_param": "The reference param of {1} field is invalid."
+    "workflow.valid.invalid_reference_param": "The reference param of {1} field is invalid.",
+    "workflow.editor.helper_text_set_content_type_in_header": "Please set Content-Type in the Header"
 }
